--- a/src/components/item_list/item_list.scss
+++ b/src/components/item_list/item_list.scss
@@ -12,9 +12,20 @@
             border-bottom: #757575 solid 1px;
             color: #fff;
             font-size: 20px;
+            &:last-child{
+                border-bottom: none;
+            }
+            &:hover{
+                background-color: #757575;
+                border-radius: 15px;
+            }
         }
-        li:last-child{
-            border-bottom: none;
-        }
+        
+        
+    }
+}
+@media(max-width: 1000px){
+    .card_list{
+        width: 700px;
     }
 }
