--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -16,7 +16,8 @@
 }
 .lds-eclipse{
     width:100%;
-    height:100%
+    height:100%;
+    margin-bottom: 20px;
 }
 
 @-webkit-keyframes lds-eclipse {
