--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -14,15 +14,30 @@ li{
     max-width: 1100px;
     width: auto;
     margin: 0 auto;
+    .btn_toggle{
+        background: orange;
+        border: none;
+        height: 30px;
+        font-size: 21px;
+        border-radius: 5px;
+        margin-bottom: 30px;
+        &:focus{
+            outline: none;
+        }
+        &:hover{
+            background: orangered;
+        }
+    }
+    .card{
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-start;
+        flex-wrap: wrap;
+        transition: 0.8s;
+    }
 }
 
-.card{
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    flex-wrap: wrap;
-    transition: 0.8s;
-}
+
 
 @media(max-width: 1000px){
     .card{
