--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -21,6 +21,7 @@ li{
         font-size: 21px;
         border-radius: 5px;
         margin-bottom: 30px;
+        margin-right: 15px;
         &:focus{
             outline: none;
         }
