--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -14,6 +14,10 @@ header{
                 font-size: 20px;
                 font-weight: bold;
                 text-decoration-line: none;
+                &:hover{
+                    background: rgb(92, 92, 92);
+                    border-radius: 5px;
+                }
             }
         }
     }
