--- a/src/components/index.html
+++ b/src/components/index.html
@@ -1,37 +1,37 @@
 (
-<div className='block_random'>
-    <img src={`https:/starwars-visualguide.com/assets/img/planets/${id}.jpg`} alt="#" />
-    <div className="info_card">
-        <h3>
-            {name}
-        </h3>
-        <ul>
-            <li>
-                <span>
-                    Population
-                </span>
-                <span>
-                    {population}
-                </span>
-            </li>
-            <li>
-                <span>
-                    Rotaion Period
-                </span>
-                <span>
-                    {rotationPeriod}
-                </span>
-            </li>
-            <li>
-                <span>
-                    Diameter
-                </span>
-                <span>
-                    {diameter}
-                </span>
-            </li>
-
-        </ul>
-    </div>
+<div className="block_random">
+  <img src={`https:/starwars-visualguide.com/assets/img/planets/${id}.jpg`}
+  alt="#" />
+  <div className="info_card">
+    <h3>
+      {name}
+    </h3>
+    <ul>
+      <li>
+        <span>
+          Population
+        </span>
+        <span>
+          {population}
+        </span>
+      </li>
+      <li>
+        <span>
+          Rotaion Period
+        </span>
+        <span>
+          {rotationPeriod}
+        </span>
+      </li>
+      <li>
+        <span>
+          Diameter
+        </span>
+        <span>
+          {diameter}
+        </span>
+      </li>
+    </ul>
+  </div>
 </div>
 )
